--- a/PTsobremim.html
+++ b/PTsobremim.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iara Ramos - início</title>
-    <link rel="stylesheet" href="PTstyle.css">
+    <title>Iara Ramos - sobre mim</title>
+    <link rel="stylesheet" href="PTsobremim.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/icon.png">
 </head>
 <body>
-  <div class="flag-container">
-  <a href="index.html">
+ <div class="flag-container">
+  <a href="sobremim.html">
     <svg class="changelgs" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
       <rect x="1" y="4" width="30" height="24" rx="4" ry="4" fill="#fff"></rect>
       <path d="M1.638,5.846H30.362c-.711-1.108-1.947-1.846-3.362-1.846H5c-1.414,0-2.65,.738-3.362,1.846Z" fill="#a62842"></path>
@@ -48,42 +48,58 @@
   <div class="flag-tooltip">EN-en</div>
 </div>
 
+<div class="back-text">
+        não olhes para <a href="PTindex.html">TRÁS</a>
+</div>
+
 <a href="PTcontactos.html"><div class="contact-text">CONTACTOS</div></a>
 
-
-    <h1>OLÁ</h1>
-
-  <div class="eye-layout">
+<div class="sobremim">
     
-    <!-- Left images stack -->
-    <div class="side left">
-  <div class="portfolio-stack">
-      <img src="assets/portfoliodesempreshadow.png" alt="" class="portfolio-shadow">
-      <img src="assets/portfoliodesempre.png" alt="" class="portfolio-front">
-  </div>
 
-  <a target="_blank" href="https://www.youtube.com/watch?v=ejpTLC00dqU">
-      <img src="assets/cvcriativo.png" alt="">
-  </a>
-</div>
+    <div class="section">
+        <h1>SOBRE MIM</h1>
+        <p>Olá! Sou estudante de Multimédia na EPI – Escola Profissional de Imagem em Lisboa. Adoro criar coisas de todas as formas digitais, especialmente web design, modelação 3D e edição de vídeo.</p>
+    </div>
 
-    <!-- Central eye -->
-    <a href="PTportfolio.html"><div class="eye">
-        <img src="assets/red-shadow.png" alt="" class="back-shadow">
-        <img src="assets/olho back.png" alt="" class="back">
-        <img src="assets/olho iris.png" alt="" class="iris">
-        <img src="assets/olho outer.png" alt="" class="outer">
-    </div></a>
+    <div class="section image-section">
+        <img src="assets/eu1.jpg" alt="Sua Foto">
+    </div>
 
-    <!-- Right images stack -->
-    <div class="side right">
-        <img src="assets/omeutrabalhoeomeuponto.png" alt="">
-        <img src="assets/placa-alma.png" alt="">
+    <div class="section">
+        <p>Também gosto de programar websites com HTML, CSS e JavaScript. Transformar ideias em projetos reais é algo que me deixa genuinamente feliz.</p>
+    </div>
+
+    <div class="section image-section">
+        <img src="assets/eu2.jpg" alt="Gatos">
+    </div>
+
+    <div class="section">
+        <p>Gosto de multimédia desde criança, muito antes de sequer conhecer a palavra. Cresci rodeada de computadores e sempre tive um lado artístico.</p>
+    </div>
+
+    <div class="section image-section">
+        <img src="assets/eu3.jpg" alt="Gatos">
+    </div>
+
+    <div class="section">
+        <p>Adoro ver séries de TV (Breaking Bad é a melhor), cozinhar (principalmente massa), colecionar media de desenhos animados perdidos e, claro, adoro absolutamente gatos.</p>
+    </div>
+
+    <div class="section image-section">
+        <img src="assets/eu5.jpeg" alt="">
+    </div>
+
+    <div class="section">
+        <p>A honestidade é um dos meus valores mais fortes. Sou ambiciosa, responsável e determinada a construir um futuro fazendo o que mais gosto (isto).</p>
     </div>
 </div>
+    <div class="scroll-arrow right" id="scrollRight">➡</div>
 
-    <h2>SOU A <a href="PTsobremim.html" class="iararamos">IARA RAMOS</a></h2>
 
-    <script src="PTscript.js"></script>
+
+
+
+<script src="PTsobremim.js"></script>
 </body>
 </html>
