--- a/PTportfolio.html
+++ b/PTportfolio.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" href="assets/icon.png">
 </head>
 <body class="bodyport">
-  <div class="flag-container">
+ <div class="flag-container">
   <a href="portfolio.html">
     <svg class="changelgs" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
       <rect x="1" y="4" width="30" height="24" rx="4" ry="4" fill="#fff"></rect>
@@ -360,11 +360,10 @@ Colaboração da WTvision juntamente com a EPI. 06/2025</p>
 
   <div class="window-content dg">
     <!-- coloca isto DENTRO de .window-content.dg, antes de .dg-inside -->
-<div class="toggle-wrap">
-  <button id="toggle-descriptions"><svg fill="#8ef9ff" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 416.979 416.979" xml:space="preserve" stroke="#8ef9ff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M356.004,61.156c-81.37-81.47-213.377-81.551-294.848-0.182c-81.47,81.371-81.552,213.379-0.181,294.85 c81.369,81.47,213.378,81.551,294.849,0.181C437.293,274.636,437.375,142.626,356.004,61.156z M237.6,340.786 c0,3.217-2.607,5.822-5.822,5.822h-46.576c-3.215,0-5.822-2.605-5.822-5.822V167.885c0-3.217,2.607-5.822,5.822-5.822h46.576 c3.215,0,5.822,2.604,5.822,5.822V340.786z M208.49,137.901c-18.618,0-33.766-15.146-33.766-33.765 c0-18.617,15.147-33.766,33.766-33.766c18.619,0,33.766,15.148,33.766,33.766C242.256,122.755,227.107,137.901,208.49,137.901z"></path> </g> </g></svg></button>
-</div>
 
     <div class="dg-inside">
+
+      <div class="design-gallery">
       
       <div class="design-item clickable">
         <img src="assets/CARTAZ.jpg" alt="">
@@ -379,6 +378,7 @@ Colaboração da WTvision juntamente com a EPI. 06/2025</p>
             <div class="design-item clickable">
         <img src="assets/N1.png" alt="">
         <div class="overlay">N.1 - Logo para APP inventada. 06/2024</div>
+        </div>
       </div>
     </div>
   </div>
