--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 </div>
 
-    <h2>I AM IARA RAMOS</h2>
+    <h2>I AM <a href="sobremim.html" class="iararamos">IARA RAMOS</a></h2>
 
     <script src="script.js"></script>
 </body>
