--- a/PTportfolio.html
+++ b/PTportfolio.html
@@ -301,7 +301,7 @@
             <div class="tv-frame">
       <img src="assets/tv 2.png" alt="Ecrã TV" class="tv-image">
             <a href="https://youtu.be/y-dOEkdHBJg" target="_blank" class="tv-link">
-      <img src="assets/agronomia clipe final2.gif" alt="Vídeo 2" class="tv-screen">
+      <img src="assets/agronomiaclipefinal2.gif" alt="Vídeo 2" class="tv-screen">
       <div class="tv-overlay">
         <p>Video promocional feito para o H3 em colaboração com a equipa de Rugby "Agronomia". Edição realizada por mim. 01/2025</p>
       </div>
