--- a/portfolio.html
+++ b/portfolio.html
@@ -270,7 +270,7 @@ Although I made it during the first year of my course, I was already creating it
             <div class="tv-frame">
       <img src="assets/tv 2.png" alt="Ecrã TV" class="tv-image">
             <a href="https://youtu.be/y-dOEkdHBJg" target="_blank" class="tv-link">
-      <img src="assets/agronomia clipe final2.gif" alt="Vídeo 2" class="tv-screen">
+      <img src="assets/agronomiaclipefinal2.gif" alt="Vídeo 2" class="tv-screen">
       <div class="tv-overlay">
         <p>Promotional video made for H3 in collaboration with the “Agronomia” Rugby team. Edited by me. 01/2025</p>
       </div>
