--- a/portfolio.html
+++ b/portfolio.html
@@ -256,7 +256,7 @@ Although I made it during the first year of my course, I was already creating it
     <div class="tv-frame">
       <img src="assets/tv.png" alt="Ecrã TV" class="tv-image">
           <a href="https://youtu.be/ZZvdLydFRfg" target="_blank" class="tv-link">
-      <img src="assets/arvore.png" alt="Vídeo 1" class="tv-screen">
+      <img src="assets/idadismo.gif" alt="Vídeo 1" class="tv-screen">
       <div class="tv-overlay">
         <p>Production and team filming for the Lisbon City Council to promote the fight against “ageism.” Individual video editing done by me. 01/2025</p>
       </div>
